Upload on the interface: change px to grid and percentage dimensions

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@ Mapka sal
   </section>
 
   <section id="panelElement">
-
+    Kategorie
+    <section id="map">
 
       <section id="lists">
       <div>
@@ -112,6 +113,7 @@ Mapka sal
         wiecej elementow
       </div>
       </section>
+    </section>
 
 </section>
 
@@ -128,6 +130,13 @@ Mapka sal
           wiecej elementow
           elementy listy
           wiecej elementow
+          elementy listy
+          wiecej elementow
+          elementy listy
+          wiecej elementow
+          wiecej elementow
+          elementy listy
+          wiecej elementow
         </div>
       </section>
       <section id="day">Wtorek
@@ -137,6 +146,13 @@ Mapka sal
           elementy listy
           wiecej elementow
           elementy listy
+          elementy listy
+          wiecej elementow
+          elementy listy
+          wiecej elementow
+          wiecej elementow
+          elementy listy
+          wiecej elementow
           wiecej elementow
         </div>
       </section>
@@ -145,6 +161,13 @@ Mapka sal
           elementy listy
           wiecej elementow
           elementy listy
+          wiecej elementow
+          elementy listy
+          wiecej elementow
+          elementy listy
+          wiecej elementow
+          elementy listy
+          wiecej elementow
           wiecej elementow
           elementy listy
           wiecej elementow
@@ -158,6 +181,9 @@ Mapka sal
           wiecej elementow
           elementy listy
           wiecej elementow
+          wiecej elementow
+          elementy listy
+          wiecej elementow
         </div>
       </section>
       <section id="day">Piątek
@@ -165,6 +191,13 @@ Mapka sal
           elementy listy
           wiecej elementow
           elementy listy
+          wiecej elementow
+          elementy listy
+          wiecej elementow
+          elementy listy
+          wiecej elementow
+          elementy listy
+          wiecej elementow
           wiecej elementow
           elementy listy
           wiecej elementow
