change div to ol and ul

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 <body onload="odliczanie();">
 
 <header>
-  <h1 class="logo">Plan zajęć</h1>
-  <div id="zegar">12:00:00</div>
+  <h1 class="logo">Plan zajęć
+    <section id="zegar">12:00:00</section>
+  </h1>
+  
 </header>
 
 <main>
@@ -70,49 +72,41 @@ Mapka sal
 
   <section id="panelElement">
     Kategorie
-    <section id="map">
+    <section>
 
-      <section id="lists">
-      <div>
-        Lista nauczycieli
-      </div>
-      <div class="listElem">
-        elementy listy
-        wiecej elementow
-        elementy listy
-        wiecej elementow
-        elementy listy
-        wiecej elementow
-      </div>
+      <section id="lists">Lista nauczycieli
+      <ul class="listBackground" style="list-style-type:none;">
+        <li>nauczyciel</li>
+        <li>nauczyciel</li>
+        <li>nauczyciel</li>
+        <li>nauczyciel</li>
+        <li>nauczyciel</li>
+        <li>nauczyciel</li>
+      </ul>
       </section>
 
-      <section id="lists">
-      <div>
-        Lista klas
-      </div>
-      <div class="listElem">
-        elementy listy
-        wiecej elementow
-        elementy listy
-        wiecej elementow
-        elementy listy
-        wiecej elementow
-      </div>
-      </section>
+      <section id="lists">Lista klas
+        <ul class="listBackground" style="list-style-type:none;">
+          <li>klasa</li>
+          <li>klasa</li>
+          <li>klasa</li>
+          <li>klasa</li>
+          <li>klasa</li>
+          <li>klasa</li>
+        </ul>
+        </section>
 
-      <section id="lists">
-      <div>
-        Lista zajęć
-      </div>
-      <div class="listElem">
-        elementy listy
-        wiecej elementow
-        elementy listy
-        wiecej elementow
-        elementy listy
-        wiecej elementow
-      </div>
-      </section>
+        <section id="lists">Lista przedmiotów
+          <ul class="listBackground" style="list-style-type:none;">
+            <li>przedmiot</li>
+            <li>przedmiot</li>
+            <li>przedmiot</li>
+            <li>przedmiot</li>
+            <li>przedmiot</li>
+            <li>przedmiot</li>
+          </ul>
+          </section>
+
     </section>
 
 </section>
@@ -123,85 +117,54 @@ Mapka sal
     Plan lekcji
     <section id="plan">
       <section id="day">Poniedziałek
-        <div class="listElem">
-          elementy listy
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-        </div>
+          <ol type="1" class="listBackground">
+            <li>przedmiot</li>
+            <li>przedmiot</li>
+            <li>przedmiot</li>
+            <li>przedmiot</li>
+            <li>przedmiot</li>
+            <li>przedmiot</li>
+          </ol>
       </section>
       <section id="day">Wtorek
-        <div class="listElem">
-          elementy listy
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-          elementy listy
-          elementy listy
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-          wiecej elementow
-        </div>
+        <ol class="listBackground">
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+        </ol>
       </section>
       <section id="day">Środa
-        <div class="listElem">
-          elementy listy
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-        </div>
+        <ol class="listBackground">
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+        </ol>
       </section>
       <section id="day">Czwartek
-        <div class="listElem">
-          elementy listy
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-        </div>
+        <ol class="listBackground">
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+        </ol>
       </section>
       <section id="day">Piątek
-        <div class="listElem">
-          elementy listy
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-          wiecej elementow
-          elementy listy
-          wiecej elementow
-        </div>
+        <ol class="listBackground">
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+          <li>przedmiot</li>
+        </ol>
       </section>
     </section>
   </article>
