2nd version of the layout + small fixes

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <meta name="keywords" content="plan, zajęć, szkoła, timetable, lekcje,
   plan lekcji" />
 
-  <link rel="stylesheet" href="style.css" type="text/css"/>
+  <link rel="stylesheet" href="styleH.css" type="text/css"/>
   <link rel="stylesheet" href="css/fontello.css" type="text/css"/>
+  <link href="https://fonts.googleapis.com/css?family=KoHo" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Charmonman|Josefin+Sans&amp;subset=latin-ext"
   rel="stylesheet" type="text/css">
 
@@ -44,7 +45,8 @@ Mapka sal
     </div>
     <div class="room">103
     </div>
-    <div class="specialRoom">wc
+    <div class="specialRoom">
+        <i class="icon-toilet"></i>
     </div>
     <div class="room">104
     </div>
@@ -58,7 +60,8 @@ Mapka sal
     </div>
     <div class="room">108
     </div>
-    <div class="specialRoom">p.n.
+    <div class="specialRoom">
+        <i class="icon-coffee"></i>
     </div>
     <div class="room">109
     </div>
@@ -107,6 +110,10 @@ Mapka sal
           </ul>
           </section>
 
+    </section>
+
+    <section>
+      <section class="button">edytuj</section>
     </section>
 
 </section>
@@ -192,5 +199,10 @@ Mapka sal
   </main>
 
 </body>
+
+<footer>
+  
+    <section class="button">Wersja dla daltonistów</section>
+</footer>
 
 </html>
